--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
             
         </section>
 
-        <a href="pdf/Angelo-resume.pdf" download class="btn btn--download">
+        <a href="pdf/AngeloNolasco-Resume.pdf" download class="btn btn--download">
             Download
             <span class="u-bolder">Resume</span>
         </a>
