--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="btn-container">
           <button
             class="btn btn-color-2"
-            onclick="window.open('./pdf/AngeloNolasco-Resume.pdf')"
+            onclick="window.open('./pdf/Angelo_Nolasco_Resume.pdf')"
           >
             Download CV
           </button>
@@ -59,7 +59,7 @@
             src="./images/linkedin.png"
             alt="My LinkedIn profile"
             class="icon"
-            onclick="location.href='https://linkedin.com/in/angeloanolasco'"
+            onclick="location.href='www.linkedin.com/in/angelonol'"
           />
           <img
             src="./images/github.png"
@@ -367,7 +367,6 @@
           </ul>
         </div>
       </nav>
-      <p>Copyright &#169; 2023 John Doe. All Rights Reserved.</p>
     </footer>
     <script src="./js/script.js"></script>
   </body>
